--- a/project_semester/main.tex
+++ b/project_semester/main.tex
@@ -56,90 +56,147 @@
     \pagebreak
 
     \section{Introduction}
+    \label{sec:introduction}
+
+    % why still empty????
 
     \section{DataCloud}
+    \label{sec:datacloud}
+
+    % todo write interlude that leads to the quote
+
 
         \begin{quote}
-            DataCloud delivers a toolbox of new languages, methods, infrastructures, and prototypes for discovering, simulating, deploying, and adapting Big Data pipelines on heterogeneous and untrusted resources. DataCloud separates the design from the run-time aspects of Big Data pipeline deployment, empowering domain experts to take an active part in their definitions. \cite{datacloudAbout}
+            DataCloud delivers a toolbox of new languages, methods, infrastructures, and prototypes for discovering, simulating, deploying, and adapting Big Data pipelines on heterogeneous and untrusted resources. DataCloud separates the design from the run-time aspects of Big Data pipeline deployment, empowering domain experts to take an active part in their definitions \cite{dumitruProjectProjectDataCloud}.
         \end{quote}
 
-        \subsection{Overall Architecture}
+        \subsection{DataCloud Architecture}
+        \label{sec:architecture-datacloud}
+
+        % todo, write small interlude
 
             The overall architecture is shown in figure \ref{fig:datacloud-toolbox-overview}.
 
             \begin{figure}[h!]
                 \centering
                 \includegraphics[width=0.95\textwidth]{figures/datacloud_toolbox.png}
-                \caption{DataCloud Toolbox Overview \cite{datacloudToolbox}}
+                \caption{DataCloud Toolbox Overview \cite{dumitruDataCloudToolbox}}
                 \label{fig:datacloud-toolbox-overview}
             \end{figure}
             
-                \subsubsection*{DIS-PIPE}
+            \subsubsection*{DIS-PIPE}
+            \label{sec:discover-pipe-datacloud}
 
-                    DIS-PIPE (Discover pipeline) uses a set of process mining techniques and AI algorithms to analyse and learn the structure of Big Data pipelines. This is done by extracting, processing and interpreting the vast amount of event data that is collected by multiple heterogeneous data sources. Additionally, the DIS-PIPE module includes a variety of analytics techniques that help to visualise the discovered pipelines together with diagnostics information regarding their execution. 
+                DIS-PIPE (Discover pipeline) \cite{agostinelliDISPIPE2023} uses a set of process mining techniques and AI algorithms to analyse and learn the structure of Big Data pipelines. This is done by extracting, processing and interpreting the vast amount of event data that is collected by multiple heterogeneous data sources. Additionally, the DIS-PIPE module includes a variety of analytics techniques that help to visualise the discovered pipelines together with diagnostics information regarding their execution. 
 
-                \subsubsection*{DEF-PIPE}
+            \subsubsection*{DEF-PIPE}
+            \label{sec:definition-pipe-datacloud}
 
-                    DEF-PIPE (Definition pipeline) uses domain-specific language (DSL)\footnote{https://www.jetbrains.com/mps/concepts/domain-specific-languages/} to provide a visual design for the implementation of Big Data pipelines.
-                    This includes support for storing and loading the pipeline definitions and displaying them in a UI. For this, the pipeline structure is declared by domain experts.
-                    Furthermore, it is designed to allow Data Scientists to define the content by providing the configuration of each pipeline step.
+                DEF-PIPE (Definition pipeline) \cite{mitrovicDEFPIPEFrontend2022} uses domain-specific language (DSL)\footnote{https://www.jetbrains.com/mps/concepts/domain-specific-languages/} to provide a visual design for the implementation of Big Data pipelines.
+                This includes support for storing and loading the pipeline definitions and displaying them in a UI. For this, the pipeline structure is declared by domain experts.
+                Furthermore, it is designed to allow Data Scientists to define the content by providing the configuration of each pipeline step.
 
-                \subsubsection*{SIM-PIPE}
+            \subsubsection*{SIM-PIPE}
+            \label{sec:simulation-pipe-datacloud}
 
-                    The SIM-PIPE (Simulation pipeline) module generates and simulates a deployment configuration that takes hardware requirements into account and also includes additional middleware information that is required. The generated result is then used for the final deployment.
-                    The module also includes a sandbox that enables the evaluation of individual pipeline steps to analyse the performance as well as a simulator for determining the performance of the Big Data pipeline.
-                    
-                \subsubsection*{ADA-PIPE}
+                The SIM-PIPE (Simulation pipeline) \cite{nikolovSIMPIPE} module generates and simulates a deployment configuration that takes hardware requirements into account and also includes additional middleware information that is required. The generated result is then used for the final deployment.
+                The module also includes a sandbox that enables the evaluation of individual pipeline steps to analyse the performance as well as a simulator for determining the performance of the Big Data pipeline.
+                
+            \subsubsection*{ADA-PIPE}
+            \label{sec:adaptation-pipe-datacloud}
 
-                    ADA-PIPE (Adaptation pipeline) is the module that we are working on.
-                    ADA-PIPE provides a data-aware algorithm for smart and adaptable provisioning of resources and services. The tool allows resource reconfiguration for improved computational performance and interoperability by monitoring and analysis of diverse resources. 
-                    
-                    The monitoring of resources and the mapped pipeline tasks allow analysing of the gathered data to be able to make more accurate predictions in the future based on machine learning algorithms that are specifically made for the prediction of time-series or sequential data.
+                ADA-PIPE (Adaptation pipeline) \cite{mehranADAPIPE2023} is the module that we are working on.
+                ADA-PIPE provides a data-aware algorithm for smart and adaptable provisioning of resources and services. The tool allows resource reconfiguration for improved computational performance and interoperability by monitoring and analysis of diverse resources. 
+                
+                The monitoring of resources and the mapped pipeline tasks allow analysing of the gathered data to be able to make more accurate predictions in the future based on machine learning algorithms that are specifically made for the prediction of time-series or sequential data.
 
-                \subsubsection*{R-MARKET}
+            \subsubsection*{R-MARKET}
+            \label{sec:resource-market-datacloud}
 
-                    R-MARKET deploys a decentralized resource network that is based on a hybrid of permissioned and permissionless blockchain. This blockchain federates a set of heterogeneous resources from multiple providers spread across the Computing Continuum.
-                    R-MARKET provides a marketplace for resources at every service layer that is managed in a trustful democratic manner.
-                    The marketplace enables the provisioning of resources over multiple domains for external use.
+                R-MARKET (Resource-MARKET) \cite{senguptaRMARKET} deploys a decentralized resource network that is based on a hybrid of permissioned and permissionless blockchain. This blockchain federates a set of heterogeneous resources from multiple providers spread across the Computing Continuum.
+                R-MARKET provides a marketplace for resources at every service layer that is managed in a trustful democratic manner.
+                The marketplace enables the provisioning of resources over multiple domains for external use.
 
-                \subsubsection*{DEP-PIPE}
+            \subsubsection*{DEP-PIPE}
+            \label{sec:deploy-pipe-datacloud}
 
-                    DEP-PIPE (Deploy-PIPE) provides elastic and scalable deployment and orchestration of Big Data pipelines while addressing run-time aspects.
-                    The module also features real-time event detection and automated decision-making for automated deployment and orchestration.
+                DEP-PIPE (Deploy-PIPE) \cite{ledakisDEPPIPE} provides elastic and scalable deployment and orchestration of Big Data pipelines while addressing run-time aspects.
+                The module also features real-time event detection and automated decision-making for automated deployment and orchestration.
 
-        \subsection{Required Interfaces for Collaboration}
+        \subsection{Required REST Interfaces for Collaboration}
         \label{sec:required-interfaces}
 
+            \subsubsection{Pipelines}
+            
+                \begin{description}
+                    \item[Endpoint] \texttt{/pipelines}
+                    \item[REST Methods] \texttt{GET, POST}
+                    \item[Description] The pipelines endpoint is used to get a JSON file that contains a list of all pipelines that are currently running in the DataCloud system with the \texttt{GET} method. To upload a new pipeline and its tasks, the \texttt{POST} method can be used. The process after posting the pipeline is described in section \ref{sec:requirement-file-preprocessing-server}. Once a pipeline is successfully uploaded using the \texttt{POST} method, it can also be retrieved with the \texttt{GET} method as long as the pipeline is running inside the system.
+                \end{description}
+
+                
+            \subsubsection{Requirements}
+
+            \begin{description}
+                \item[Endpoint] \texttt{/requirements/<pipeline\_id>}
+                \item[REST Methods] \texttt{GET}
+                \item[Description] This endpoint returns the requirements of each job of the pipeline that is specified with its \texttt{pipeline\_id}. The requirements include parameters such as the maximum resource limits of a task that are not to be exceeded or the docker image and its location. Also included in the requirements are the dependencies of each task to tasks that have to be executed beforehand.
+            \end{description}
+                
+            \subsubsection{Resources}
+
+            \begin{description}
+                \item[Endpoint] \texttt{/resources}
+                \item[REST Methods] \texttt{GET}
+                \item[Description] This endpoint returns a list of all resource providers and their worker pools to the requesting client. The worker pools contain metadata, such as their name, the name of each worker, the number of workers and their resource capabilities. The resource capabilities include values such as the number of virtual CPU cores, and the memory and storage capacity.
+            \end{description}
+
+            \subsubsection{Schedules}
+
+            \begin{description}
+                \item[Endpoint] \texttt{/schedules/<pipeline\_id>}
+                \item[REST Methods] \texttt{GET}
+                \item[Description] This endpoint returns a schedule of tasks of a pipeline that corresponds to the identifier \texttt{pipeline\_id}. The tasks are returned in a list that is ordered based on the order they should be deployed on the resources. The tasks contain metadata such as the resource they need to be deployed on, the resource limits that are not to be exceeded for the task as well as the adapted resource utilisation that was predicted via machine learning.
+            \end{description}
+
     \section{Server}
+    \label{sec:server}
+
+        This section describes the used third-party tools and concepts used to implement the server of \nameref{sec:adaptation-pipe-datacloud}.
+        It was agreed upon by all developers to use \nameref{sec:rest-server} for the communication between the different pipeline components of DataCloud with specific interfaces (see \ref{sec:api-server}) to send messages.
+
+    % todo describe what will be mentioned in this section
 
         \subsection{REST}
+        \label{sec:rest-server}
 
-        % chatGPT
-            REST (Representational State Transfer) is a software architectural style for building web services. It provides a set of constraints and properties that make a web service RESTful, meaning that it is scalable, flexible, and maintainable. REST is based on the HTTP protocol and relies on client-server communication, where the client sends a request and the server returns a response. 
+            REST \cite{redhatWhatRESTAPI} (short for Representational State Transfer) was created for building web services and provides a set of constraints and properties
+            that are used to make web services \emph{RESTful}. RESTful web services are built to be scalable, flexible and maintainable.
+            REST is based on the HTTP protocol and relies on client-server communication, where a client first sends a request and the server sends back a response.
             The response contains a representation of the requested resource, which is JSON for the ADA-PIPE module.
-            The communication between ADA-PIPE and other modules uses \nameref{sec:api}s in other to forward or retrieve data.
-            
-
+            The communication between ADA-PIPE and other modules uses \nameref{sec:api-server}s in other to forward or retrieve data.
 
         \subsection{Application Programming Interface}
-        \label{sec:api}
-% chatGPT
-            An API (Application Programming Interface) is a set of protocols, routines, and tools for building software and applications. It provides a way for different software systems to communicate with each other and exchange data. An API defines the way that different software components should interact and APIs allow for these interactions over the internet. They can also specify the expected behaviour of a particular set of functionality, making it easier for developers to integrate with existing systems. APIs are used by developers to build software applications and enable communication between different systems, applications, and services.
-            The required interfaces are mentioned in section \ref{sec:required-interfaces}.
+        \label{sec:api-server}
+
+            An Application Programming Interface (API) \cite{redhatWhatRESTAPI} is a set of protocols and tools for building software and applications.
+            APIs are used to provide endpoints for different software systems (i.e. applications, services, etc.) to communicate and exchange data with each other.
+            The communication and interaction of different software components are defined via an API and they also allow these interactions to take place over the internet.
+            The required API endpoints to cooperate with other DataCloud pipelines are defined in section \nameref{sec:required-interfaces}.
 
         \subsection{Flask}
-        \label{sec:flask}
+        \label{sec:flask-server}
 
-            Flask is a Python framework for creating web applications.
+            Flask \cite{WelcomeFlaskFlask} is a Python framework for creating web applications.
             The main benefit of Flask compared to other web application frameworks for Python like Django is that it is easy and quick to get started, yet scaling up to complex web applications is easily possible and most important a lightweight framework.
-% chatGPT
-            Python Flask is a micro web framework for building web applications in the Python programming language. It provides a simple and lightweight way to create and deploy web applications. Flask is based on the Werkzeug WSGI toolkit and Jinja2 template engine and is designed to provide a minimal and flexible foundation for developing web applications. It does not include an ORM (Object Relational Manager) or such features out of the box but provides an easy way to plug in these functions through extensions. Flask is often used for small to medium-sized projects and is known for its simplicity and ease of use, making it a popular choice for beginner and experienced programmers alike.
+            Flask is often used for small to medium-sized projects and is known for its simplicity and ease of use.
 
-            In ADA-PIPE, Flask is used to implement and expose the REST server to other components of DataCloud.
+            In ADA-PIPE, Flask is used to implement and expose the \nameref{sec:rest-server} server to other components (see \ref{fig:datacloud-toolbox-overview}) of DataCloud via an \nameref{sec:api-server}.
 
         \subsection{KeyCloak Authentication}
+        \label{sec:keycloak-server}
 
-            KeyCloak is an open-source identity and access management tool.
+            KeyCloak \cite{keycloakDocumentationKeycloak} is an open-source identity and access management tool.
             DataCloud has decided to use this tool to ensure authenticated communication between all services as well as its users.
             In DataCloud, the possibly sensible data requires to be handled securely, making KeyCloak a feasible tool for user federation and access control. KeyCloak is based on strong standard protocols and provides support for many common communication protocols such as OpenID Connect, OAuth 2.0 and SAML.
             Another major feature of KeyCloak is that it can be used for many popular programming languages such as Java, JavaScript and in our case Python. The KeyCloak library implementation of each language can be used with every other KeyCloak implementation via REST calls and given the distributed working environment and usage of different programming languages depending on the expertise of each team, KeyCloak is a suitable choice for providing authentication and authorization of users and services.
@@ -157,13 +214,14 @@
 
             \lstinputlisting[language=Python, caption=KeyCloak Token Verification, label=lst:kc-verify-token]{code_samples/kc_token_verification.py}
 
-
         \subsection{Processing of Incoming Data}
+        \label{sec:processing-of-data-server}
 
             In this section, the processing of the incoming data will be discussed.
-            The incoming data in this scenario is a Big Data task pipeline that should be mapped and then deployed to the resources in the Computing Continuum. The Big Data task pipeline is defined in a custom DSL\footnote{Example: https://github.com/DataCloud-project/ADA-PIPE/blob/main/ImportFrom-DEF-PIPE/tellu.dsl} that is sent from DEF-PIPE to ADA-PIPE and is then preprocessed before analysing and scheduling the tasks. 
+            The incoming data in this scenario is a Big Data task pipeline that should be mapped and then deployed to the resources in the Computing Continuum. The Big Data task pipeline is defined in a custom DSL \cite{mehranDSLDEFPIPEExample2023} that is sent from DEF-PIPE to ADA-PIPE and is then preprocessed before analysing and scheduling the tasks. 
 
             \subsubsection{Requirement File Structure}
+            \label{sec:requirement-file-structure-server}
 
                 As mentioned, the incoming file structure is a custom DSL.
                 It is structured similarly to a JSON file with a few distinctions, but the key-value pattern and the nested value sections are similar. At the root level, the keyword \texttt{Pipeline} is always followed by the name of the pipeline.
@@ -176,29 +234,56 @@
                 
 
             \subsubsection{Requirement File Preprocessing}
+            \label{sec:requirement-file-preprocessing-server}
 
                 Since the incoming data is provided in a DSL scheme, and the next DataCloud module DEP-PIPE is responsible for the deployment of the tasks onto resources expects the file format in a JSON scheme, we parse the incoming data and convert the file as a JSON file. For this, we receive the data via REST and extract the message body and parse it.
-
+                After parsing the JSON message body, the extracted data is stored in Python objects of the classes \texttt{JobDataContainer} and \texttt{PipelineDataContainer}. 
+                The \texttt{PipelineDataContainer} class is used to store the data of the entire incoming pipeline, its structure, order and its metadata. It holds the jobs/tasks as \texttt{JobDataContainer} objects that each holds the metadata and properties of the jobs.
+                The jobs in the pipeline are stored in a list, that is sorted ascending based on the dependencies upon other tasks.
 
 
         \subsection{Testing the Server}
+        \label{sec:testing-the-server}
+
+        % todo either merge with subsubsection or find another testing method
 
             \subsubsection*{Insomnia}
+            \label{sec:insomnia-server}
             
-                For testing the server REST responses, we use the tool Insomnia\footnote{https://insomnia.rest/}.
+                For testing the server REST responses, we use the tool Insomnia \cite{konginc.IntroductionInsomnia}.
                 Insomnia is a popular cross-platform REST (Representational State Transfer) client for testing and debugging REST APIs. It allows developers to easily send HTTP requests and view responses, making it an indispensable tool for working with RESTful APIs. Some of the key features of Insomnia include support for multiple request methods (such as GET, POST, PUT, etc.). Insomnia also provides real-time request and response previews, as well as the ability to validate and format JSON data.
                 As is already stated, Insomnia stores the requests and is also capable of validating JSON data, and we used this functionality to test the responses of the server for correctness.
 
-        
+                % todo mention unit tests of insomnia
+                   
+
+            \subsubsection*{Nmap}
+            \label{sec:nmap-server}
+
+                Network Mapper (Nmap) is a popular open-source tool for network discovery and security auditing. It is often used for tasks such as network inventory, monitoring hosts or service uptime as well as looking for vulnerabilities in network components.
+
+                \begin{quote}
+                    Nmap uses raw IP packets in novel ways to determine what hosts are available on the network, what services (application name and version) those hosts are offering, what operating systems (and OS versions) they are running, what type of packet filters/firewalls are in use, ... \cite{NmapNetworkMapper}
+                \end{quote}
+
+                In ADA-PIPE we use Nmap to test if the network component that provides our REST services (see section \ref{sec:rest-server}) is reachable and also only exposes the necessary ports to do so. Nmap also proves a service to run scripts that look for common vulnerabilities. If a possible vulnerability is found by a script, it gets listed with the corresponding CVE number.
+                A found vulnerability in the system was found (see listing \ref{lst:nmap-output}) by Nmap using the command: \texttt{\$ sudo nmap -sV -script=vuln <ip\_number>}. To enable the scripts that look for vulnerabilities, the flag \texttt{-script=vuln} needs to be included. 
+                As stated in the Nmap report, the port number \texttt{8011} is vulnerable to a \emph{directory traversal} attack in the \emph{phpMyAdmin} \cite{phpmyadminBringingMySQLWeb} service. The details of the vulnerability can be found with its identifier \texttt{CVE-2005-3299} and also by the references provided by the script.
+                
+
+                \lstinputlisting[language=Bash, caption=Nmap Vulnerability Output Example, label=lst:nmap-output]{code_samples/nmap_output.bash}
 
             % And then we found out that Tinky did a big Stinky and we rejoiced.             
 
     \section{Monitoring}
+    \label{sec:monitoring}
+
+    % todo shortly provide an overview here
             
         \subsection{Netdata}
-        \label{sec:netdata}
+        \label{sec:netdata-monitoring}
 
-            Netdata is an open-source tool that collects real-time metrics, including CPU usage, disk activity, bandwidth usage and furthermore.
+            Netdata \cite{netdataGettingStartedLearn2023} is an open-source tool that collects real-time metrics, including CPU usage, disk activity, bandwidth usage and furthermore.
             The reason we chose Netdata for monitoring is that it is a lightweight tool mostly written in C, Python and Javascript and it requires minimal resources, which is necessary when monitoring edge devices.
             One of its major features is that it runs without interrupting any of the applications running on the same device. This is achieved by only using idle CPU cycles while running.
 
@@ -211,18 +296,18 @@
                 \label{fig:netdata-dashboard}
             \end{figure}
             Netdata has a vast amount of support for other tools in order to gather data. 
-            One of the supported tools is \nameref{sec:prometheus}, which is used to scrape the monitored data from all resources that have Netdata installed.
+            One of the supported tools is \nameref{sec:prometheus-monitoring}, which is used to scrape the monitored data from all resources that have Netdata installed.
 
 
         \subsection{Prometheus}
-        \label{sec:prometheus}
-
-            Prometheus is an open-source application used for monitoring and alerting events and is designed to run across various platforms in a scalable and easily deployable manner.
+        \label{sec:prometheus-monitoring}
+            Prometheus \cite{prometheusOverviewPrometheus} is an open-source application used for monitoring and alerting events and is designed to run across various platforms in a scalable and easily deployable manner.
             Same as Netdata it records in real-time, and stores the gathered metrics in a time series database by using a \emph{HTTP pull model}. It also allows real-time alerting via a rule-defining configuration and also has a flexible query language called \emph{PromQL}, that enables the retrieval and processing of the gathered data. Prometheus has great integration with other tools such as Netdata.
             In the project, it is used inside a monitoring master node that is continuously scraping all resources that have Netdata installed for monitoring data. In case a predefined rule is broken at a monitored resource, such as CPU over-allocation, Prometheus triggers an event that notifies ADA-PIPE in order to be able to take measurements.
             
 
     \section{Project Planning}
+    \label{sec:project-planning}
 
         The internal project planning was done with Skype Business\footnote{https://www.skype.com} and Trello\footnote{https://trello.com}.
         Skype is used as a video communication tool to discuss the current progress of the project and the future steps to take.
@@ -232,8 +317,12 @@
         For project steps that are important for other stakeholders of DataCloud, the ADA-PIPE GitHub project board is used similarly to the Trello board. This is done to ensure others see the current tasks of the team members as well as the ones that are already done or are in the backlog. Also, they can add tasks to the project board, such as bugs to be fixed or missing API functionality.
         
     \section{Code Quality}
+    \label{sec:code-quality}
+
+    % todo add an overview description to this section
 
         \subsection{Code Review}
+        \label{sec:code-review-code-quality}
 
         Code reviews are an important part of software development and have several key tasks:
         \begin{itemize}
@@ -259,22 +348,21 @@
             This is ensured by using \emph{Pull Requests} on GitHub, where the project resides. In this, a (squashed) commit is only merged into the development branch after at least one other team member has reviewed the code and deemed it acceptable to be included in the project.
             This process is done to ensure that coding conventions are kept consistent\footnote{For this project, the Python coding convention PEP8 is used and enforced. See \url{https://peps.python.org/pep-0008/}} with the existing code base, to ensure an overview understanding of the code base of all members and to quickly find code sections that need improvement or could lead to an erroneous behaviour.
 
-
     \subsection{Code Refactoring}
-    \label{sec:code-refactoring}
+    \label{sec:code-refactoring-code-quality}
 
         Code refactoring of pre-existing code was necessary in order to be able to use the components with other modules of the project.
         The reason for this is that many functionalities were written in Python scripts that were not written to be included with other modules at that stage.
-        \begin{quote}
-            Code refactoring is defined as the process of restructuring computer code without changing or adding to its external behavior and functionality.
-        \end{quote}
+        % \begin{quote}
+        %     Code refactoring is defined as the process of restructuring computer code without changing or adding to its external behavior and functionality. 
+        % \end{quote}
         Therefore, the functionality of the scripts was analysed and then put in separate methods.
         Hardcoded sections of the scripts were put into variables or abstracted were possible. 
         Since most of the hardcoded sections were specific file paths that were manually changed depending on which functionality was tested, those hardcoded sections were exported to configuration YAML files to be able to add further configuration files to the project.
 
 
     \subsection{Type Hinting and Linting}
-    \label{sec:type-hinting}
+    \label{sec:type-hinting-code-quality}
 
         Python supports \emph{type hinting}\footnote{https://docs.python.org/3/library/typing.html} since version 3.5.
         This enables type annotation for functions, variables and other components.
@@ -289,10 +377,14 @@
 
         A major benefit of using type hinting not mentioned above is that \emph{Linters} use the provided type hints to enable type checks before runtime. 
         In short, a linter is a tool to improve the written code. Linters diagnose the code and warn about technical issues, inconsistent coding style, security and performance issues. This helps to omit using the wrong data types even in an interpreted programming language such as Python in many cases as we get a warning if a type is used that was not hinted at by us.
-        What makes linters a valuable addition to the used tool set, and in the project, the linter \emph{PyLance}\footnote{https://marketplace.visualstudio.com/items?itemName=ms-python.vscode-pylance} is used. 
+        What makes linter tools a valuable addition to the used tool set, and in the project, the linter \emph{PyLance}\footnote{https://marketplace.visualstudio.com/items?itemName=ms-python.vscode-pylance} is used. 
 
         
     \section{Future Work}
+    \label{sec:future-work}
+
+    % todo add short overview of future work
+
         % \subsection{Concurrency}
         \subsection{Extensive Documentation}
             Documentation is available to some extent in the current version of the project, yet lacks documentation for many sections, such as an overview of the overall system, and the installation guide for new users.
